# SensibleDB

./: ARCHITECTURAL_GUARDRAILS.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Cargo.toml  README.md  TASK_COMPLETION_SUMMARY.md  TESTING.md  clippy_check.sh  mkdocs.yml  package-lock.json  playwright.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  cli.yml  cli_tests.yml  cliv2.yml  db_tests.yml  dev_instance_tests.yml  docs.yml  e2e-tests.yml  explorer-release.yml  hql_tests.yml  macos-x64-quickfix.yml  production_db_tests.yml  s3_push.yml
.sisyphus/: ralph-loop.local.md
docs/: INDEX.md  index.md  rebranding-plan.md
docs/cli/: getting-started.md
docs/features/: overview.md  table-partitioning-feature-plan.md  table-partitioning.md
docs/getting-started/: installation.md  (+2 more)
e2e/: chat-view.spec.ts  fixtures.ts  graph-view.spec.ts  home-view.spec.ts  navigation.spec.ts  onboarding-and-polish.spec.ts  report-view.spec.ts
e2e-results/: index.html
metrics/: Cargo.toml
metrics/src/: lib.rs
nexus-cli/: Cargo.toml  ENTERPRISE_CLI_TEST_PLAN.md  README.md  TESTING.md  install.sh
nexus-container/: Cargo.toml
nexus-db/: Cargo.toml  Dockerfile
nexus-macros/: Cargo.toml
nql-tests/: Cargo.toml  README.md  test.sh
scripts/: e2e-test.sh
sensibledb-cli/: Cargo.toml  ENTERPRISE_CLI_TEST_PLAN.md  README.md  TESTING.md  install.sh
sensibledb-container/: Cargo.toml
sensibledb-db/: Cargo.toml  Dockerfile
sensibledb-explorer/: Cargo.toml  tauri.conf.json
sensibledb-macros/: Cargo.toml
sensibledb-macros/src/: lib.rs
sensibledb-macros/tests/: macro_tests.rs
(+532 files in other folders)
