[package]
name = "sensibledb-metrics"
version = "0.1.1"
edition = "2024"
authors = ["NexusDB Team"]
repository = "https://github.com/Sensible-Analytics/SensibleDB"
license = "AGPL-3.0"
description = "Metrics for NexusDB"

[dependencies]
reqwest = "0.12.11"
serde = { version = "1.0", features = ["derive"] }
sonic-rs = "0.5.7"
chrono = "0.4"
uuid = { version = "1.18.0", features = ["v7", "fast-rng"] }
tokio = { version = "1.39", features = ["full"] }
async-trait = "0.1.88"
flume = { version = "0.12.0", default-features = false, features = ["async", "select"] }
num_cpus = "1.17.0"
