[package]
name = "sensibledb-macros"
version = "0.1.7"
edition = "2024"
authors = ["NexusDB Team"]
repository = "https://github.com/Sensible-Analytics/SensibleDB"
license = "AGPL-3.0"
description = "Proc macros for NexusDB"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.104", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
dirs = "5.0.1"

[dev-dependencies]
trybuild = "1.0"

[features]
debug-output = []
default = []

