[package]
name = "sensibledb-macros"
version = "0.1.7"
edition = "2024"
authors = ["SensibleDB Team"]
repository = "https://github.com/SensibleDB/sensibledb-db"
license = "AGPL-3.0"
description = "Proc macros for SensibleDB"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.104", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"
dirs = "5.0.1"

[dev-dependencies]
trybuild = "1.0"

[features]
debug-output = []
default = []

